style: final polish - UI cleanup, footer alignment & notification badge fix

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,14 @@
   --font-body: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
+.container {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 * {
   box-sizing: border-box;
 }
